--- a/src/data/puzzles/1020.md
+++ b/src/data/puzzles/1020.md
@@ -17,11 +17,11 @@ Linearity of expectation
 ## Solution
  Each time we draw, there could be a possible color-switch, except the first time we draw, hence 99 possible switches.
 
- Let $X_i$ be a random variable taking value 1 if $i_{th}$ position has a colour change and zero otherwise, note that $i$ goes from $1$ to $99$.
+ Let $X_i$ be an indicator variable, value 1 if $i_{th}$ position has a colour change and zero otherwise, note that $i$ goes from $1$ to $99$.
 
- Total number of changes, $S = X_1 + X_2 + ... + X_{99} = \sum_{i=1}^{99} X_i$
+ Total number of switches, $S = X_1 + X_2 + ... + X_{99} = \sum_{i=1}^{99} X_i$
 
- The expected number of color changes is denoted by the sum of these variables, i.e $E[S] = E[X_1 + X_2 + ... + X_{99}]$
+ The expected number of color switches is denoted by the sum of these variables, i.e $E[S] = E[X_1 + X_2 + ... + X_{99}]$
 
  Linearity of expectation states that the expected value of the sum of random variables is equal to the sum of their individual expected values.
 
@@ -29,13 +29,13 @@ Linearity of expectation
 
  Note that each $X_i$ is identical, and the expected value is equal for each $i$, i.e, $E(X_k) = E(X_1) $
 
- Hence $E[S] = E[X_1] + ... + E[X_n] = \sum_{i=1}^{99} E[X_1] = 99 * E[X_1] $
+ Hence $E[S] = E[X_1] + ... + E[X_n] = \sum_{i=1}^{99} E[X_1] = 99 \cdot E[X_1] $
 
- Also, we can calculate the expected value, $E[X_1] = 1 * P(X_1 = 1) + 0 * P(X_1 = 0) = P(X_1 =1) $
+ Also, we can calculate the expected value, $E[X_1] = 1 \cdot P(X_1 = 1) + 0 \cdot P(X_1 = 0) = P(X_1 =1) $
 
- Probability of any given color change is (either first is R second is B, or first is B and second is R) $= P(X_1 = 1)= \dfrac{50}{100}*\dfrac{50}{99} + \dfrac{50}{100}*\dfrac{50}{99} = 50/99$
+ Probability of any given color change is (either first is R second is B, or first is B and second is R) $= P(X_1 = 1)= \dfrac{50}{100} \cdot \dfrac{50}{99} + \dfrac{50}{100} \cdot \dfrac{50}{99} = 50/99$
 
- Finally, the answer is $ E[S] = \sum_{i=1}^{99} E[X_i] = 99 * E[X_1] = 99 * 50/99 = 50$ 
+ Finally, the answer is $ E[S] = \sum_{i=1}^{99} E[X_i] = 99 \cdot E[X_1] = 99 \cdot 50/99 = 50$ 
 
 ---
 
