--- a/src/data/puzzles/28.md
+++ b/src/data/puzzles/28.md
@@ -12,15 +12,27 @@ A father claims about snowfall last night. First daughter tells that the probabi
 Conditional Probability or Baye's Theorem
 
 ## Answer
-
+1/36
 
 ## Solution
-Let $S =$ Snowfall occurred, and $C =$ Claim
+Let $S =$ Snowfall occurred, and $C$ be the event that the father is claiming snowfall ocurred.
 
- Probability of (Snowfall given Claim) = $P(S | C) = \dfrac{P(C|S)*P(S)}{P(C)}$
 
- $P(C|S) = 1/6$,  $P(S) = 1/8$
+Probability of (Snowfall given Claim) = $P(S | C) = \dfrac{P(C|S) \cdot P(S)}{P(C)}$
 
- $P(C) = P(\text{True claim}) + P(\text{False Claim}) = (P(C|S)*P(S)) + P( \text{False claim} | \text{No snow}) * P(\text{No snow})$
+$P(S) = 1/8$
 
- This is same as $[1/6*1/8]/[ 1/6*1/8 + 7/8*5/6] = 1/36$
+$P(C|S) =1 - 5/6 = 1/6$ (given in the question, father lies 5/6 times)
+
+
+ $P(C) = P(\text{True claim}) + P(\text{False Claim})$
+
+ $= P(C \cap S) + P(C \cap S')$  where $S'$ means that it did not snow.
+ 
+ $= P(C|S) \cdot P(S) + P( C | S') * P(S')$
+
+ $= (1/6 \cdot 1/8) + (5/6 \cdot 7/8)$
+
+$P(S | C) = \dfrac{P(C|S) \cdot P(S)}{P(C)} = \dfrac{1/6 \cdot 1/8}{(1/6 \cdot 1/8) + (5/6 \cdot 7/8)} = \dfrac{1}{36}$
+
+
