--- a/src/data/puzzles/221.md
+++ b/src/data/puzzles/221.md
@@ -87,7 +87,7 @@ This game has nothing to do with dynamic programming or number theory. It is an 
 
 Using a script to generate the first move for a few values of $N$.
 
-[Run in Google Colab](https://colab.research.google.com/brainstellar.com/code/puzzles-code/blob/221.ipynb)
+[Colab Script](https://colab.research.google.com/github/varun-seth/puzzles-code/blob/develop/221.ipynb)
 
 
 |  $N$  | &nbsp;&nbsp;&nbsp;&nbsp; First move |
