--- a/src/data/puzzles/1008.md
+++ b/src/data/puzzles/1008.md
@@ -6,10 +6,16 @@ category: "probability"
 ---
 
 ## Question
-Warning: I could not solve it.
-In a room stand n armed and angry people. At each chime of a clock, everyone simultaneously spins around and shoots a random other person. The persons shot fall dead and the survivors spin and shoot again at the next chime. Eventually, either everyone is dead or there is a single survivor.
 
-As n grows, what is the limiting probabality that there will be a survivor. :)
+In a room stand $N$ armed and angry people. At each chime of a clock, everyone simultaneously spins around and shoots a random other person. The persons shot fall dead and the survivors spin and shoot again at the next chime. Eventually, either everyone is dead or there is a single survivor.
+
+As n grows, what is the limiting probability that there will be a survivor. :)
+
+**Warning**: I could not solve it.
+
+Play with the script here:
+[Colab Script](https://colab.research.google.com/github/varun-seth/puzzles-code/blob/develop/1008.ipynb)
+
 
 ## Hint
 
@@ -18,4 +24,5 @@ As n grows, what is the limiting probabality that there will be a survivor. :)
 
 
 ## Solution
+
 
