scripts hidden from public repo

--- a/src/data/puzzles/1008.md
+++ b/src/data/puzzles/1008.md
@@ -13,8 +13,12 @@ As n grows, what is the limiting probability that there will be a survivor. :)
 
 **Warning**: I could not solve it.
 
-Play with the script here:
-[Colab Script](https://colab.research.google.com/github/varun-seth/puzzles-code/blob/develop/1008.ipynb)
+Play with the scripts here:
+
+
+1. [Simulation Script](https://colab.research.google.com/gist/varun-seth/3bb3e08571d2b5ff4e3348ebb9ea5f4b/puzzle_1008_rdd_sim.ipynb)
+2. [Brute Forcing Script](https://colab.research.google.com/gist/varun-seth/c57ed32726bf7492daa9dea375398c09/puzzle_1008_rdd_exact.ipynb)
+
 
 
 ## Hint
