--- a/src/data/puzzles/1008.md
+++ b/src/data/puzzles/1008.md
@@ -1,6 +1,6 @@
 ---
 puzzleId: 1008
-title: "Red Dead Redemption"
+title: "Bullets of Fate"
 difficulty: "deadly"
 category: "probability"
 ---
@@ -9,17 +9,9 @@ category: "probability"
 
 In a room stand $N$ armed and angry people. At each chime of a clock, everyone simultaneously spins around and shoots a random other person. The persons shot fall dead and the survivors spin and shoot again at the next chime. Eventually, either everyone is dead or there is a single survivor.
 
-As n grows, what is the limiting probability that there will be a survivor. :)
+As $N$ grows, what is the limiting probability that there will be a survivor?
 
-**Warning**: I could not solve it.
-
-Play with the scripts here:
-
-
-1. [Simulation Script](https://colab.research.google.com/gist/varun-seth/3bb3e08571d2b5ff4e3348ebb9ea5f4b/puzzle_1008_rdd_sim.ipynb)
-2. [Brute Forcing Script](https://colab.research.google.com/gist/varun-seth/c57ed32726bf7492daa9dea375398c09/puzzle_1008_rdd_exact.ipynb)
-
-
+**Warning**: I could not solve it. The solution only shows what I tried.
 
 ## Hint
 
@@ -30,3 +22,22 @@ Play with the scripts here:
 ## Solution
 
 
+I have tried the following scripts
+
+1. [Simulation Script](https://colab.research.google.com/gist/varun-seth/3bb3e08571d2b5ff4e3348ebb9ea5f4b/puzzle_1008_rdd_sim.ipynb)
+2. [Brute Forcing Script](https://colab.research.google.com/gist/varun-seth/c57ed32726bf7492daa9dea375398c09/puzzle_1008_rdd_exact.ipynb)
+3. [Simulation with Dynamic Programming](https://colab.research.google.com/gist/varun-seth/1b5c9f181e9f61850714af51d1737153/puzzle_1008_rdr_sim_dynamic.ipynb)
+
+Following is the pattern.
+
+
+![plot1](1008_plot1.svg)
+
+![plot1](1008_plot2.svg)
+
+![plot1](1008_plot3.svg)
+
+
+It appears to be moving towards 0.5 but I do not have any proof or any intuitive logic as to why.
+
+Also, not sure why these waves appeared, and why the wavelength is expanding.
