--- a/src/data/puzzles/12.md
+++ b/src/data/puzzles/12.md
@@ -23,9 +23,9 @@ Suppose $t(\theta)$ is the temperature at the point $\theta$.
 
 Define $f(\theta) = t(\theta)-t(\theta+\pi)$
 
-Note that $f(0)=t(0)-t(pi)$
+Note that $f(0)=t(0)-t(\pi)$
 
-$f(\pi)=t(\pi)-t(2 \pi) = t(pi)-t(0) = -f(0)$
+$f(\pi)=t(\pi)-t(2 \pi) = t(\pi)-t(0) = -f(0)$
 
 Either both $f(0)$ and $f(\pi)$ are $0$ or one of them is positive and the other is negative.
 
