--- a/src/data/puzzles/216.md
+++ b/src/data/puzzles/216.md
@@ -6,15 +6,51 @@ category: "probability"
 ---
 
 ## Question
-You are taking out candies one by one from a jar that has 10 red candies, 20 blue candies, and 30 green candies in it. What is the probability that there are at least 1 blue candy and 1 green candy left in the jar when you have taken out all the red candies? (Candies of same color are indistinguishable!)
+You are taking out candies one by one from a jar that has $10$ red candies, $20$ blue candies, and $30$ green candies in it. What is the probability that there is at least $1$ blue candy and $1$ green candy left in the jar when you have taken out all the red candies? 
+
+Assume that the candies of the same color are indistinguishable from one another.
 
 ## Hint
-Combinatorial problem. Consider a sequence of 60 candies, in which red candies finish before blue and green.
+Consider the sequences of 60 candies, in which red candies finish before blue and green.
 
 ## Answer
 7/12
 
 ## Solution
-It can be done using combinatorics as well as conditional probability. I don't have time today, but please remind me to put proper solution by commenting down below or by sending me a message. Thank you.
 
-#TODO
+
+
+$\dfrac{30}{60} \cdot \dfrac{20}{30}+\dfrac{20}{60} \cdot \dfrac{30}{40} =\dfrac{7}{12}$
+
+We will reach this formula by considering the complete sequence of 60 candies. 
+
+Any scenario that satisfies the given question will match one of the following two:
+
+1. The  $60^{\text{th}}$ candy in this sequence is **green**, and some blue candy exists before this and after the last red candy.
+
+2. The $60^{\text{th}}$ candy is **blue**, and some green candy exists before this and after the last red candy.
+
+In the first scenario, let $G$ be the event that the  $60^{\text{th}}$ candy is green. Let $B^*$ be the event that there is a blue candy before that but after the last red. Since these two events are not independent, we want to calculate:
+
+ $P(G \cap B^*) = P(G) \cdot P(B^* | G)$
+
+$P(G) = 30/60$ because the $60^{\text{th}}$ candy will be one of 30 greens, and there are a total of 60 choices.
+
+$P(B^* | G)$ is the probability of finding a blue candy after the last red, given that the $60^{\text{th}}$ candy is green. Now remove all green candies from consideration, there are 30 candies (10 red & 20 blue). Imagine a random sequence of these 30 candies (it might be scattered anywhere from position 1 to $59$, but still, it is a random sequence of 30 candies only). The probability that the $30^{\text{th}}$ one of these is blue is $20/30$.
+
+Thus $P(G \cap B^*) = (30/60) \cdot (20/30)$.
+
+
+Similarly, for the second scenario, let $B$ be the event that the $60^{\text{th}}$ candy is blue and let $G^*$ be the event that there is a green candy before that but after the last red. We want to calculate $P(B \cap G^*) = P(B) \cdot P(G^* | B) = (20/60) \cdot (30/40)$
+
+Since these two scenarios are mutually exclusive, the probability of union is the sum of these probabilities.
+
+Hence the answer: $1/3 + 1/4 = 7/12$
+
+---
+
+Not convinced? Here is a simulation script that shows the probability converging to 7/12.
+
+[Colab Script](https://colab.research.google.com/gist/varun-seth/a10254682b88c22ae09e9ddf25d1dba6/puzzle_216_left_some_candies.ipynb)
+
+
