📝 215 explained martingale properties

--- a/src/data/puzzles/215.md
+++ b/src/data/puzzles/215.md
@@ -6,18 +6,97 @@ category: "probability"
 ---
 
 ## Question
-You are initially located at origin in the x-axis. You start a random walk with equal probability of moving left or right one step at a time. What is the probability that you will reach point a before reaching point -b? What is the expected number of steps to reach either a or -b? (a,b are natural numbers)
+You are initially located at the origin on the $x$-axis. You start a random walk with an equal probability of moving left or right, one step at a time. What is the probability that you will reach point $a$ before reaching point $-b$? 
+
+Assume $a$, $b$ are natural numbers.
 
 ## Hint
-
+Consider the expected value of the position at the end of the game.
 
 ## Answer
-b/(a+b) and ab
+$b/(a+b)$
 
 ## Solution
-If you try markov chain approach, this question will never end! For this problem, we will use Martingales.
-Let N = number of steps to reach any of a or -b. Let SN = X1+...+XN.  Suppose Pa = probability of touching a before -b, and Pb = the opposite. We use the fact that both SN and (SN^2-N) are martingales, thus:
-0 = E(SN) = a * Pa + (-b) * Pb
-This gives Pa = b/(a+b)
-Similarly, 0 = E(SN^2-N) = Pa * a^2 + Pb * b^2 - E(N)
-This gives E(N) = ab
+<!-- If you try the Markov-chain approach, this question will never end! For this problem, we will use Martingales. -->
+
+
+### Probability
+
+Let us assume that we stop walking the moment we reach any of $a$ or $-b$. As we keep walking randomly, we'll eventually hit one of the two points, and the game will surely end.
+
+Suppose $P_a$ is the probability that we end at $a$, and $1 - P_a$ is the probability that we end with $-b$. 
+
+Let $S$ be the position on the $x$-axis at the end of this game.
+
+$E[S] = a \cdot P_a + (-b) \cdot (1 - P_a)$
+
+Also note that the walk is symmetric (equal probability in either direction), so, logically, $E[S] = 0$
+
+$0 = a \cdot P_a - b \cdot (1 - P_a)$
+
+Solve to get $P_a = \dfrac{b}{a + b}$
+
+---
+
+### Follow up Question
+What is the expected number of steps to reach either $a$ or $-b$? 
+
+
+### Follow up Solution
+
+**Warning**: This solution requires the knowledge of Martingales and advanced stochastic theory.
+
+In probability theory, a Martingale is a model of a fair game where knowledge of past events never helps predict the mean of the future winnings, and where the expected value of the next play, given all the plays so far, is the same as the present value, even though the next play could have several possible outcomes.
+
+Formally, the sequence $X_n$ is a Martinagle if:
+
+$${E} [X_{n+1}\mid X_{1},\ldots ,X_{n}]=X_{n}$$
+
+Since we're conducting a random walk, where each step can either be $+1$ (right) or $-1$ (left). This type of problem can be analyzed using a Martingale approach.
+
+
+Let $S_n = X_1+...+X_n$ where each $X_i$ is a random variable that is $+1$ or $-1$ with equal probability.
+
+
+Here $S_n$ is a Martingale because:
+
+$E[S_{n+1}] = 0.5(S_{n} + 1) + 0.5(S_n - 1) = S_n$
+
+Also, this means, $E[S_{n+2}] = S_n$, in fact all future expected values are equal to the current position.
+
+In other words, given we are standing at position $S_n$, the expected value of the next step is the current value.
+
+Let $N$ = the number of steps to reach any of $a$ or $-b$ starting from position 0.
+
+$S_N$ is either $a$ or $-b$, with probability $P_a$ and $1 - P_a$ respectively.
+
+Note that $E[S_N] = 0$ because we start from 0, and all future expected values are equal to current the position. This property can be used to find $P_a$
+
+$0 = E[S_N] = a \cdot P_a - b \cdot (1 - P_a)\implies P_a = \dfrac{b}{a+b}$
+
+
+We want to calculate $E[N]$, i.e. the number of steps taken to end the game.
+
+**Leap-of-faith:** Consider the special variable $S^*_n = (S^2_n - n)$, what's the expected value?
+
+$E[S^*_{n+1}] = E[S^2_{n+1} - (n+1)] = 0.5 * ((S_{n}+1)^2 - (n+1))+ 0.5 * ((S_{n}-1)^2 -(n+1))$
+
+<!-- $= \dfrac{S^2_{n} + 1 - 2S_n}{2} + \dfrac{ +(n+1)}{2} - (n+1)$ -->
+$= S^2_{n} + 1 - (n+1) = S^2_n-n = S^*_n$
+
+This satisfies the martingale property!
+
+Hence, at the end of the game, the expected value is: $E[S^*_N] =$ The current value of $(S^2_n - n) = 0^2 -0 = 0$ (because no moves have been made yet)
+
+Now, we just expand $E[S^*_N]$
+
+$0 = E[S^*_N] = E[S_N^2-N]= E[S_N^2] - E[N]$
+
+$\implies 0 = P_a \cdot a^2 + (1 - P_a) \cdot b^2 - E[N]$
+
+$\implies E[N]=\dfrac{b \cdot a^2}{a+b} + \dfrac{a\cdot b^2}{a+b}$
+
+$\implies E[N] = a\cdot b$
+
+Hence it takes on average $(a\cdot b)$ steps to end the game
+
