--- a/src/data/puzzles/22.md
+++ b/src/data/puzzles/22.md
@@ -57,9 +57,15 @@ This is too difficult for me.
 -->
 Consider $g(x) = \ln(f(x)) =  \dfrac{\ln(x)}{x}$
 
-Differentiate using product rule: $d(u \cdot v) = u' \cdot v + u \cdot v'$ where $u=\ln(x), v = 1/x, u'=1/x, v' = -1/x^2$
+Differentiate using product rule: 
+
+$(u \cdot v)' = u' \cdot v + u \cdot v'$ 
+
+where $u=\ln(x), v = 1/x, u'=1/x, v' = -1/x^2$
 
 $g'(x) = \dfrac{1}{x} \cdot \dfrac{1}{x} + \ln(x) \cdot \dfrac{-1}{x^2}$
+
+$g'(x) = \dfrac{1-\ln{(x)}}{x^2}$
 
 The derivative $g'$ is negative if $\ln(x) > 1$
 
