--- a/src/data/puzzles/5.md
+++ b/src/data/puzzles/5.md
@@ -7,13 +7,16 @@ category: "probability"
 
 ## Question
 How do you place 50 good candies and 50 rotten candies in two boxes such that if you choose a box at random and take out a candy at random, it better be good!
-That means probability of choosing a good candy should be highest.
+
+We need to maximize the probability of getting a good candy when selecting a random box and a random candy from it.
 
 ## Hint
-Placing all bad in 1 box and all good in another will give probability of choosing good just half. But placing only one type of candy in one box makes sure that good candy has a probability of at-least 1/2
+Placing all bad in 1 box and all good in another will give the probability of 0.5, which is not the maximum.
 
 ## Answer
-Put 1 good candy in one box and all other (49 good and 50 rotten candies) in second box
+Place 1 good candy in one box and all the remaining (49 good and 50 rotten candies) in the second box.
 
 ## Solution
-Put 1 good candy in one box and all other (49 good and 50 rotten candies) in second box. This will give a probability of $(1/2) * 1 + (1/2) * (49/99) = 74.\bar{74}\%$
+Place 1 good candy in one box and all remaining (49 good and 50 rotten candies) in the second box. 
+
+This will give a probability of $(1/2) * 1 + (1/2) * (49/99) = 74.\bar{74}\%$
