standing in circle

--- a/src/data/puzzles/23.md
+++ b/src/data/puzzles/23.md
@@ -6,13 +6,133 @@ category: "general"
 ---
 
 ## Question
-100 pirates stand in a circle. They start shooting alternately in a cycle such that 1st pirate shoots 2nd, 3rd shoots 4th and so on. They continue in circle till only one pirate is left. Which position should Captain Jack Sparrow stand to survive?
+100 pirates stand in a circle. They start shooting alternately in a cycle such that the 1st pirate shoots the 2nd, the 3rd shoots the 4th and so on. They continue in a circle till only one pirate is left. Which position should someone stand to survive?
 
 ## Hint
-
+Simple counting
 
 ## Answer
-
+73
 
 ## Solution
-This is not a puzzle at all, this is apti/maths question, but has become quite common. You can calculate for a N=100, 73rd position is safe. For a general N, find largest m such that 2^m < N. Take t = N-2^m. Then Safe position is $2 \cdot t + 1$. Please learn this formula. No need to prove it using strong induction. Proof: http://en.wikipedia.org/wiki/Josephus_problem#k.3D2
+<!--
+This is not a puzzle at all, this is apti/maths question, but has become quite common. 
+-->
+
+By simple counting, we can calculate that for a $N=100$, the $73^{\text{rd}}$ position is safe. 
+
+---
+
+If $n$ pirates stand in a circle, find the largest $m$ such that $2^m < n$. 
+
+Take $l = n-2^m$. 
+
+Then the safe position is $2 \cdot l + 1$. 
+
+We can memorize this formula. 
+
+For $N=100, 2^m=64, m=6, l = 36 \implies 2 \cdot l + 1 = 73$
+
+---
+### Proof for $n=2^k$ 
+
+
+Let us define "round" as one complete circle of shooting.
+
+Firstly, let's consider the case when $n$ (number of people) is a power of 2. 
+
+Let's say $n = 2^k$. 
+
+In the first round, all even-numbered people die, and only odd-numbered people survive. Note that $1^{\text{st}}$ person survives, and in total, $2^{k-1}$ people survive. In the second round, the $1^{\text{st}}$ starts shooting the same way, and the $2^{\text{nd}}$ person dies. Continuing this way, we see that the $1^{\text{st}}$ person always survives.
+
+Hence, for $n = 2^k$, the safe position is $1$.
+
+
+---
+
+### Proof for $n>2^k$
+
+This proof is very dry and unlikely to be in any interview.
+
+
+Now, let's say we have more than $2^k$ people, but less than $2^{k+1}$, that is $n = 2^k + l$ where $l < 2^k$.
+
+<!-- #### Let $l = 1$
+
+After the first round, all even $2^{k-1}$ players are dead. The extra $l=1$ player has fired a shot, but it is currently in mid-air. At the beginning of the second round, the odd members will die, i.e. $[1, 5, 9, ...]$ (note that we have 3, 5,... are even members now). Incidentally, this will also kill the extra $l=1$ player because there are $2^{k-1} + 1$ players, and the odd players are getting shot. At the end of this round, we'll be left with $2^{k-2}$ players, while the $3^{\text{rd}}$ player is at the beginning. Hence, the $3^{\text{rd}}$ player will survive till the end. -->
+
+<!-- For $l=1$, the safe position is $3$.
+
+#### Let $l=2$
+
+This time, after the first round, we're left with $2^{k-1} + 1$ players without the parity switch. So, this is equivalent to the previous case, and the $3^{\text{rd}}$ player will survive, except that this 3 is itself shifted as the 2nd round starts with [1,3,5,7...]. So, this time, the safe position is $5$. -->
+
+<!-- For $l=2$, the safe position is $5$. -->
+
+Let us assume that $f(n)$ is the safe position for $n$ players.
+We can manually compute it for some positions.
+
+
+|  $n$   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   | 9   |  10   |  11   |  12   |  13   |  14   |  15   |  16   |
+| :----: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | --- | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| $f(n)$ |   1   |   1   |   3   |   1   |   3   |   5   |   7   |   1   | 3   |   5   |   7   |   9   |  11   |  13   |  15   |   1   |
+
+It appears that $f(n) = 2l + 1$ where $l$ is the largest power of 2 less than $n$.
+
+
+Here's the formal proof using strong induction. Consider these cases.
+
+
+
+
+
+
+The **strong induction** is used on $n$. The base case $n=1$ is true.
+
+
+The cases are considered separately when $n$ is even and when $n$ is odd.
+
+#### If $n$ is even
+
+If the initial number of people was even, then at the beginning of round 2, we see [1, 3, 5, 7, 9, ...].
+Then the person in position $x$ during the second time around the circle was originally in position  $2x - 1$ (for every choice of $x$). Let $n=2j$. The person at $f(j)$ who will now survive was originally in position $2f(j) - 1$. This yields the recurrence 
+
+$f(2j)=2f(j)-1$
+
+Again, as $n$ is even, we choose $l_1$ and $m_1$ such that $n/2 = 2^{m_1}+l_1$ and $0\leq l_1 < 2^{m_1}$. 
+
+Note that $l_1 = l/2$.
+
+$f(n) = 2f(n/2)-1 = f(2^{m_1} + l_1)$
+
+But using induction hypothesis $f(2^{m_1} + l_1) = 2 \cdot l_1  +1$
+
+$= 2((2l_1)+1) - 1=2\cdot l+1$ 
+
+
+#### If $n$ is odd
+
+If the initial number of people was odd, then person 1 can be thought of as dying at the end of the first time around the circle (shot by the last person in the circle). An odd number of people are killed, hence even numbers are remaining in the second round. Again, during the second time around the circle, we see numbers [3, 5, 7, 9,...], here also the first shoots the second and so on.
+In this case, the person in position $x$ in the second round was originally in position $2x+1$. This yields the recurrence
+
+$f(2j+1)=2f(j)+1$
+
+Since $n$ is odd, choose $l_1$ and $m_1$ such that $(n-1)/2 = 2^{m_1}+l_1$ and $0\leq l_1 < 2^{m_1}$. 
+
+Note that $l_1 = (l-1)/2$.
+
+$f(n) = 2f((n-1)/2)+1=2((2l_1)+1) + 1=2\cdot l+1$ 
+
+Hence proved.
+
+Formal Proof taken from [wikipedia](http://en.wikipedia.org/wiki/Josephus_problem#k.3D2).
+
+---
+
+### Footnotes
+
+1. This problem is called "Josephus problem", named after Flavius Josephus, a Jewish historian living in the 1st century. Allegedly, he and his 40 soldiers were trapped in a cave by Roman soldiers. Preferring suicide instead of being captured, they decided to form a circle and, kill every third soldier until none remained. Josephus, who preferred to surrender, managed to arrange the order of the soldiers in the circle so that he and another man were the last two survivors. At this point, they surrendered to the Romans rather than killing themselves.
+
+
+2. Strong Induction and weak induction are two ways of proving a statement for all natural numbers. The core difference is that in weak induction, we assume that the statement is true for $n$ and then prove it for $n+1$. In strong induction, we assume that the statement is true for all $1 \le k \leq n$ and then prove it for $n+1$. Sometimes, the proof is easier using strong induction, but in general, any proof that can be done with weak induction can also be done with strong induction, and vice versa.
+
