--- a/src/data/puzzles/218.md
+++ b/src/data/puzzles/218.md
@@ -15,4 +15,12 @@ A spy is located on a one-dimensional line.  At time 0, the spy is at location A
 
 
 ## Solution
+[Here is a detailed solution with images]("http://g0rg0nz0l4.blogspot.in/2010/11/catching-spy-and-infinity.html)
 
+And here is a short solution:
+
+Since integer 2-tuples $(x,y)$ are countable, there exists a function $f:N \rightarrow N*N$ such that $f$ covers all integer 2-tuples. 
+
+Let $f(n)=(f_1(n),f_2(n))$. The algorithm will be to check for location $f1(n) + n\cdot f_2(n)$ at time instant $n$. 
+
+Given $A$ and $B$, there exists $n_0$ such that $f(n_0)=(f_1(n_0),f_2(n_0))=(A,B)$, and thus at time instant $n_0$ we will be checking for location $f_1(n_0)+n_0 \cdot f_2(n_0)$ which is $= A+ B \cdot n_0$ - the actual location of the spy.
