📝 22 revisit e^pi, added plot and variants - also reduced the difficulty level back to easy

--- a/src/data/puzzles/22.md
+++ b/src/data/puzzles/22.md
@@ -1,7 +1,7 @@
 ---
 puzzleId: 22
 title: "e^Pi or Pi^e"
-difficulty: "hard"
+difficulty: "easy"
 category: "general"
 ---
 
@@ -82,3 +82,23 @@ $\implies e^\pi > \pi^e$
 
 Thus $e^\pi$ is bigger.
 
+---
+Notes:
+1. This puzzle is kept in the "easy" category because it is easy to ask. The answer is also "easy" to verify, using a calculator. But when solving, it is a hard puzzle.
+
+2. Here's a plot of $f(x)=x^{1/x}$ 
+
+    ![plot](22_plot.svg)
+
+3. This is a common question in placement tests. It would be a good idea to memorize that $f(x) = x^{1/x}$ is decreasing in the range $x > e$. Using this, we can prove other variants. 
+   
+
+    |                  | relation |                    | &nbsp;&nbsp; | using  function                      |
+    | ---------------: | :------: | :----------------- | ------------ | :----------------------------------- |
+    |        $e^{\pi}$ |   $>$    | $\pi^{e}$          |              | $f(x)$ at $x=e, \pi$                 |
+    |      $e^{2 \pi}$ |   $>$    | $\pi ^ {2e}$       |              | $f^2(x)$ at $x=e, \pi$               |
+    |      $e^{\pi^2}$ |   $>$    | $\pi ^ {e^2}$      |              | $\sqrt{f(x)}$ at $x=e^2, \pi^2$      |
+    | $e^{\sqrt{\pi}}$ |   $<$    | $\pi ^ {\sqrt{e}}$ |              | $f(x)^2$ at $x=\sqrt{e}, \sqrt{\pi}$ |
+    
+    
+    <!-- |  $e^{2\pi}$ |   $>$    | $\pi ^ {2e}$  |              |        $f(x)/2$ at $x=2e, 2\pi$ | -->
